--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "sendit",
   "version": "1.0.0",
   "description": "a web application to deliver parcels",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "dev": "webpack-dev-server --hot --inline",
+    "build": "webpack --config webpack.prod.config.js --mode production",
+    "start": "npm run build "
   },
   "author": "olympians",
   "license": "ISC",
@@ -35,17 +33,19 @@
     "react-hot-loader": "^4.8.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "babel-polyfill": "^6.26.0",
+    "express": "^4.16.4",
     "react": "^16.8.5",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.5",
     "react-router-dom": "^5.0.0",
-    "redux-thunk": "^2.3.0",
-    "serve": "^10.1.2"
+    "redux-thunk": "^2.3.0"
   }
 }
