feature(create order): user can create order [starts #165053002]

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --hot --inline",
     "build": "webpack --config webpack.prod.config.js --mode production",
-    "start": "npm run build "
+    "start": "npm run build && NODE_ENV=production node server.js"
   },
   "author": "olympians",
   "license": "ISC",
@@ -31,10 +31,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "react-hot-loader": "^4.8.0",
-    "react-redux": "^6.0.1",
-    "redux": "^4.0.1",
     "uglifyjs-webpack-plugin": "^2.1.2",
-    "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
   },
@@ -45,7 +42,14 @@
     "react": "^16.8.5",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.5",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "webpack": "^4.29.6"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mnswaleh/bootfront.git"
   }
 }
